<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<packaging>jar</packaging>
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.greatgamesonly.shared.opensource.sql.framework</groupId>
	<artifactId>lightweightsql</artifactId>
	<url>https://github.com/ricomaster9000/LightWeight_Java_PSQL_Framework</url>
	<version>1.5.4</version>
	<name>${project.groupId}:${project.artifactId}</name>
	<description>Lightweight Java PSQL Database interaction framework to be used effectively on lambdas running on Java, but can be used for traditional apps as well</description>
	<licenses>
		<license>
			<name>MIT License</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Ricardo Minnaar</name>
			<email>ricorpwd@yahoo.co.za</email>
			<organization/>
			<organizationUrl/>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:git://github.com/ricomaster9000/LightWeight_Java_PSQL_Framework.git</connection>
		<developerConnection>scm:git:ssh://github.com:ricomaster9000/LightWeight_Java_PSQL_Framework.git</developerConnection>
		<url>https://github.com/ricomaster9000/LightWeight_Java_PSQL_Framework/tree/main</url>
	</scm>
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
	<properties>
		<compiler-plugin.version>3.8.1</compiler-plugin.version>
		<maven.compiler.parameters>true</maven.compiler.parameters>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>
	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>commons-dbutils</groupId>
			<artifactId>commons-dbutils</artifactId>
			<version>1.8.1</version>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.5.5</version>
		</dependency>
		<dependency>
			<groupId>com.github.ricomaster9000</groupId>
			<artifactId>Java-Reflection-Utils</artifactId>
			<version>1.1.15</version>
		</dependency>
		<dependency>
			<groupId>com.github.ricomaster9000</groupId>
			<artifactId>ResourceUtils</artifactId>
			<version>1.2.2</version>
			<exclusions>
				<exclusion>
					<groupId>com.github.ricomaster9000</groupId>
					<artifactId>Java-Reflection-Utils</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!--<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.6</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>-->
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.8</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>false</autoReleaseAfterClose>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
